--- a/FullstackBlazorBootcamp/AI.VideoTranscriberApp.BlazorUI/AI.VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscriber.razor
+++ b/FullstackBlazorBootcamp/AI.VideoTranscriberApp.BlazorUI/AI.VideoTranscriberApp.BlazorUI.Client/Pages/WasmTranscriber.razor
@@ -149,4 +149,10 @@
 
         public bool IsFileSelected { get; set; } = false;
     }
+
+    public class TranscriptionModel
+    {
+        public string Language { get; set; }
+        public string Text { get; set; }
+    }
 }
