--- a/FullstackBlazorBootcamp/AI.VideoTranscriberApp.BlazorUI/AI.VideoTranscriberApp.BlazorUI/Components/App.razor
+++ b/FullstackBlazorBootcamp/AI.VideoTranscriberApp.BlazorUI/AI.VideoTranscriberApp.BlazorUI/Components/App.razor
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="AI.VideoTranscriberApp.BlazorUI.styles.css" />
+    <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="../Styles/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
